수업때 간단하게

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>자기소개</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <section>
+    <header>
+      <h1>Portfolio</h1>
+    </header>
+    <section id="section1">
       <img src="assets/hui.png" width="200" />
       <h1>후이바오</h1>
       <p>송바오 껌딱지, 사는 곳 에버랜드</p>
